--- a/layout/cv.j2
+++ b/layout/cv.j2
@@ -3,15 +3,15 @@
 
 {% block header %}
 <header class="vcard">
-  <h1 class="author fn">Vincent Bernat</h1>
-  <abbr class="tel lf-cv-phone" title="+33618392754">+33 6 18 39 27 54</abbr>
-  <a class="email" href="mailto:vincent@bernat.im">vincent@bernat.im</a><br/>
-  <a class="url" href="http://vincent.bernat.im">vincent.bernat.im</a>
+  <h1 class="author fn">Tanglim LUA</h1>
+  <abbr class="tel lf-cv-phone" title="+8613735579867">+********</abbr>
+  <a class="email" href="mailto:goby@foxmail.com">goby AT foxmail.com</a><br/>
+  <a class="url" href="http://goby.github.io">goby.github.io</a>
   <div class="adr">
-    <span class="street-address">39 quai de l'Ourcq</span><br />
-    <span class="postal-code">93500</span>
-    <span class="locality">Pantin</span><br />
-    <span class="country-name">France</span>
+    <span class="street-address">*****</span><br />
+    <span class="postal-code">*****</span>
+    <span class="locality">Hangzhou</span><br />
+    <span class="country-name">China</span>
   </div>
   <img src="{{ media_url('images/vcard.png')}}" />
   {% include "sidebar.j2" %}
