--- a/layout/base.j2
+++ b/layout/base.j2
@@ -33,7 +33,7 @@
       <form id="lf-search" action="//www.google.com/search">
 	<i id="lf-search-glass"><input type="submit" class="lf-sprite-search" value=""></i>
 	<input type="hidden" name="hl" value="{{ resource.meta.language }}">
-	<input type="hidden" name="q"  value="site:vincent.bernat.im/{{ resource.meta.language }}/*">
+	<input type="hidden" name="q"  value="site:goby.github.io/{{ resource.meta.language }}/*">
 	<input id="lf-search-query" type="text" name="q" value="">
       </form>
       {% include "menu.j2" %}
@@ -81,26 +81,23 @@
     <div>
       <h3>{{ resource.meta.l10n.otherlinks|e }}</h3>
       <ul>
-	<li><a href="https://github.com/vincentbernat">GitHub</a></li>
-	<li><a href="http://www.linkedin.com/in/vincentbernat">LinkedIn</a></li>
-	<li><a href="http://qa.debian.org/developer.php?login=bernat">Debian</a></li>
-	<li><a href="http://delicious.com/vbernat/">Delicious</a></li>
-	<li><a href="http://twitter.com/vince2_">@vince2_</a></li>
+	<li><a href="https://github.com/goby">GitHub</a></li>
+	<li><a href="http://www.linkedin.com/in/gobylua">LinkedIn</a></li>
+	<li><a href="http://twitter.com/lpdl">@lpdl</a></li>
       </ul>
     </div>
  
     <div>
       <h3>Sources</h3>
       <ul>
-	<li>Powered by <a href="http://ringce.com/hyde">Hyde</a></li>
-	<li><a href="https://github.com/vincentbernat/www.luffy.cx">Site</a></li>
-	<li>
-	  <a href="https://github.com/vincentbernat/www.luffy.cx/tree/master/content/{{ resource.relative_path }}">Page</a>
+	<li>Powered by <a href="http://ringce.com/hyde">Hyde</a> & <a href="https://github.com/vincentbernat/www.luffy.cx">Vincent Bernat</a></li>
+	<li> Fork by 
+	  <a href="https://github.com/goby/goby-blog">goby</a>
 	</li>
       </ul>
     </div>
     <address class="vcard author">
-      © 2014 <a class="fn email" href="mailto:vincent@bernat.im">Vincent Bernat</a>
+      © 2014 <a class="fn email" href="mailto:goby@foxmail.com">Tanglim LUA</a>
       <a class="lf-sprite-rss"
 	 href="{{ content_url(resource.meta.language + '/blog/atom.xml') }}">
 	&nbsp;
