--- a/content/media/css/common.less
+++ b/content/media/css/common.less
@@ -29,9 +29,9 @@
 /* @font-unicode is used after serif/sans-serif and is just here to
    catch some missing unicode characters, like check mark or something
    like that. */
-@font-unicode: 'Lucida Grande','Lucida Sans Unicode','Arial Unicode MS';
-@font-regular:  'Merriweather','Droid Serif',Georgia,serif,@font-unicode;
-@font-headings: 'Source Sans Pro','Droid Sans',sans-serif,@font-unicode;
+@font-unicode: 'Lucida Grande','Lucida Sans Unicode', 'Microsoft YaHei', 'Wenquanyi Micro Hei', 'WenQuanYi Zen Hei', 'ST Heiti', SimHei, 'WenQuanYi Zen Hei Sharp', sans-serif;
+@font-regular:  'Merriweather','Droid Serif',Georgia,@font-unicode;
+@font-headings: 'Source Sans Pro','Droid Sans', @font-unicode;
 @font-console:  'Inconsolata','Droid Sans Mono',monospace,@font-unicode;
 @footer-color: #222;
 @theme-color: #21519C;
