--- a/content/media/css/luffy.article.less
+++ b/content/media/css/luffy.article.less
@@ -36,7 +36,7 @@ article {
     }
     p {
 	margin: (@line-height*1em) 0 0;
-	word-spacing: 0.25em;
+	#word-spacing: 0.25em;
         text-align: justify;
         hyphens: auto;
         @media only screen and (max-width: @page-width) {
