--- a/layout/base.j2
+++ b/layout/base.j2
@@ -26,7 +26,7 @@
   {# Navigation bar #}
   <nav id="lf-navbar">
     <div id="lf-homeicon">
-      <a class="lf-sprite-strawhat" rel="author"
+      <a class="lf-sprite-strawhat2" rel="author"
 	 href="{{ content_url( resource.meta.language ) }}/"></a>
     </div>
     <div id="lf-menubar">
