--- a/content/media/css/luffy.article.less
+++ b/content/media/css/luffy.article.less
@@ -35,9 +35,9 @@ article {
         }
     }
     p {
-	margin: (@line-height*1em) 0 0;
-	#word-spacing: 0.25em;
-        text-align: justify;
+        margin: (@line-height*1em) 0 0;
+        /*word-spacing: 0.25em;
+        text-align: justify;*/
         hyphens: auto;
         @media only screen and (max-width: @page-width) {
             text-align: inherit;
