--- a/layout/base.j2
+++ b/layout/base.j2
@@ -55,7 +55,7 @@
 	<header>
 	  <h1>{{resource.meta.title|typogrify|e}}</h1>
           <div id="lf-sideblock">
-	  {% if resource.meta.author != None %}
+	  {% if resource.meta.author == 1 %} {# Hidden author #}
 	  <h2>{{resource.meta.author|e}}</h2>
 	  {% endif %}
 	  {% from "macros.j2" import resource_date with context %}
@@ -72,6 +72,7 @@
 	</div>
 	{% endblock %}
       </article>
+      {% from "macros.j2" import resource_modified_date with context %}
       {% include "comments.j2" %}
     </div>
   </div>
