--- a/layout/menu.j2
+++ b/layout/menu.j2
@@ -2,9 +2,9 @@
 <ul>
   {% for menu in resource.meta.menu %}
   <li{% if content_url(resource.url).startswith(content_url(resource.meta.language + '/' + menu['page'])) %} class="active"{% endif %}>
-    <a href="{{ content_url(resource.meta.language + '/' + menu['page']) }}">
-      {{ menu['name']|e }}
-    </a>
+   {% if menu['page'].startswith("http") %}  <a href="{{ menu['page'] }}"> {{ menu['name']|e }} </a>
+   {% else %} <a href="{{ content_url(resource.meta.language + '/' + menu['page']) }}"> {{ menu['name']|e }} </a>
+   {% endif %}
   </li>
   {% endfor %}
 </ul>
