--- a/layout/base.j2
+++ b/layout/base.j2
@@ -98,7 +98,7 @@
       </ul>
     </div>
     <address class="vcard author">
-      © 2014 <a class="fn email" href="mailto:goby@foxmail.com">Tanglim LUA</a>
+      © 2014 - 2016<a class="fn email" href="mailto:goby@foxmail.com">Tanglim LUA</a>
       <a class="lf-sprite-rss"
 	 href="{{ content_url(resource.meta.language + '/blog/atom.xml') }}">
 	&nbsp;
