--- a/layout/base.j2
+++ b/layout/base.j2
@@ -40,7 +40,7 @@
       <form id="lf-search" action="//www.google.com/search">
 	<i id="lf-search-glass"><input type="submit" class="lf-sprite-search" value=""></i>
 	<input type="hidden" name="hl" value="{{ resource.meta.language }}">
-	<input type="hidden" name="q"  value="site:goby.github.io/{{ resource.meta.language }}/*">
+	<input type="hidden" name="q"  value="site:blog.gobyoung.com/{{ resource.meta.language }}/*">
 	<input id="lf-search-query" type="text" name="q" value="">
       </form>
       {% include "menu.j2" %}
