--- a/layout/sidebar.j2
+++ b/layout/sidebar.j2
@@ -43,23 +43,22 @@
   </div>
   {% endif %}
   {# Share #}
-  <div class="lf-link lf-share">
-      <p>{{ resource.meta.l10n.share }}</p>
-      <ul>
-	{% set url = base|urlencode + content_url(resource.url)|urlencode %}
-        {% set title = resource.meta.title|urlencode %}
-	<li><a class="lf-sprite-twitter" href="https://twitter.com/share?url={{url}}&via=lpdl&text={{title}}"
-               title="Share on Twitter">Twitter</a></li>
-	<li><a class="lf-sprite-google" href="https://plus.google.com/share?url={{url}}"
-               title="Share on Google+">Google+</a></li>
-	<li><a class="lf-sprite-facebook" href="http://www.facebook.com/sharer.php?u={{url}}&t={{title}}"
-               title="Share on Facebook">Facebook</a></li>
-	<li><a class="lf-sprite-reddit" href="http://www.reddit.com/submit?url={{url}}&title={{title}}"
-               title="Share on reddit">reddit</a></li>
-	<li><a class="lf-sprite-hackernews" href="http://news.ycombinator.com/submitlink?u={{url}}&t={{title}}"
-               title="Share on Hacker News">Hacker News</a></li>
-	<li><a class="lf-sprite-mail" href="mailto:?subject={{title}}&body={{url}}"
-               title="Share by mail">Mail</a></li>
-      </ul>
-  </div>
+  {% if resource.meta.share %}
+  <p class="bs-component btn-group-sm">{{ resource.meta.l10n.share }}
+	  {% set url = base|urlencode + content_url(resource.url)|urlencode %}
+    {% set title = resource.meta.title|urlencode %}
+    <a class="lf-sprite-twitter btn btn-default btn-fab" href="https://twitter.com/share?url={{url}}&via=lpdl&text={{title}}"
+               title="Share on Twitter">Twitter</a>
+    <a class="lf-sprite-google btn btn-default btn-fab" href="https://plus.google.com/share?url={{url}}"
+               title="Share on Google+">Google+</a>
+    <a class="lf-sprite-facebook btn btn-default btn-fab" href="http://www.facebook.com/sharer.php?u={{url}}&t={{title}}"
+               title="Share on Facebook">Facebook</a>
+    <a class="lf-sprite-reddit btn btn-default btn-fab" href="http://www.reddit.com/submit?url={{url}}&title={{title}}"
+               title="Share on reddit">reddit</a>
+    <a class="lf-sprite-hackernews btn btn-default btn-fab" href="http://news.ycombinator.com/submitlink?u={{url}}&t={{title}}"
+               title="Share on Hacker News">Hacker News</a>
+    <a class="lf-sprite-mail btn btn-default btn-fab" href="mailto:?subject={{title}}&body={{url}}"
+               title="Share by mail">Mail</a>
+  </p>
+  {% endif %}
 </nav>
