--- a/layout/base.j2
+++ b/layout/base.j2
@@ -42,7 +42,7 @@
   <div class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Work Deep in the Sea</a>
+        <a class="navbar-brand" href="/">{{ resource.meta.title|e }}</a>
       </div>
       <div class="navbar-collapse collapse navbar-responsive-collapse">
         {% include "menu.j2" %}
