--- a/layout/base.j2
+++ b/layout/base.j2
@@ -56,9 +56,9 @@
       </div>
     </div>
   </div>
-  <div id="lf-search-results">
-    <div id="lf-search-results-results"></div>
-    <span id="lf-search-results-close" class="lf-sprite-slimbox-close"></span>
+  <div id="lf-search-results" class="panel panel-info">
+    <button id="lf-search-results-close" type="button" class="close" aria-hidden="true">×</button>
+    <div id="lf-search-results-results" class="panel-body"></div>
   </div>
 
   {# Pages #}
