Fix bug with bootstrap and mathjax

--- a/content/media/css/luffy.code.less
+++ b/content/media/css/luffy.code.less
@@ -3,6 +3,12 @@ pre, code, code .amp, pre .amp {
     font-family: @font-console;
     font-style: normal;
     line-height: 1.2;
+    font-size: initial;
+    color: initial;
+    word-wrap: initial;
+    border: initial;
+    background: initial;
+    padding: initial;
 }
 .codehilite {
     .background-transparent(lighten(#F9F9F9, 2%), .4);
