--- a/layout/macros.j2
+++ b/layout/macros.j2
@@ -88,14 +88,16 @@
 
 {% macro listing(directory) %}
 <ul class="lf-listing">
-{% for archive in site.content.walk_resources_sorted_by_name()
-   if archive.source_file.parent.path.endswith("/media/" + directory) %}
+{% for archive in site.content.walk_resources_sorted_by_name() %}
+{% set arch_path = archive.source_file.parent.path.replace("\\", "/") %}
+{% if arch_path.endswith("/media/" + directory) %}
 <li>
   <img class="lf-filetype"
        src="{{ media_url("images/ext--" + archive.source_file.kind + ".png") }}"
        alt="{{ "[" + archive.source_file.kind + "]" }}">
   <a href="{{ media_url(archive.get_relative_deploy_path()[6:]) }}">{{ archive.name }}</a>
 </li>
+{% endif %}
 {% endfor %}
 </ul><div style="clear: both"></div>
 {% endmacro %}
