Change footer color

--- a/content/media/css/common.less
+++ b/content/media/css/common.less
@@ -33,7 +33,7 @@
 @font-regular:  'Merriweather','Droid Serif',Georgia,@font-unicode;
 @font-headings: 'Source Sans Pro','Droid Sans', @font-unicode;
 @font-console:  'Inconsolata','Droid Sans Mono',monospace,@font-unicode;
-@footer-color: #222;
+@footer-color: #2C3339;
 @theme-color: #21519C;
 @theme-background: #E2E1DE;
 @page-width: 45em;
