--- a/content/media/css/luffy.footer.less
+++ b/content/media/css/luffy.footer.less
@@ -7,46 +7,46 @@ footer {
     padding: 1.4em 1em 1.4em 0;
     margin-top: 3em;
     .shadow(10px);
-    color: #F0F0F0;
+    color: #AAA;
     a {
-	text-decoration: none;
-	color: #F0F0F0;
-	&:hover {
-	    color: #909090;
-	}
+        text-decoration: none;
+        color: #AAA;
+        &:hover {
+            color: #EEE;
+        }
     }
     address {
-	float: right;
-	margin-left: 2em;
+        float: right;
+        margin-left: 2em;
     }
     h3 {
-	display: inline;
-	padding: 2px 1em 2px 3em;
-	width: 10em;
-	overflow: hidden;
-	border-right: 1px solid #F0F0F0;
-	font-family: @font-headings;
-	font-weight: bold;
+        display: inline;
+        padding: 2px 1em 2px 3em;
+        width: 10em;
+        overflow: hidden;
+        border-right: 1px solid #AAA;
+        font-family: @font-headings;
+        font-weight: bold;
     }
     ul {
-	display: inline;
+        display: inline;
     }
     li {
-	display: inline;
-	padding: 0 0.7em 0 0.7em;
+        display: inline;
+        padding: 0 0.7em 0 0.7em;
     }
     div {
-	display: inline-block;
+        display: inline-block;
     }
 
     .clearfix;
 }
 @media only screen and (max-width: 768px) {
     footer h3 {
-	padding: 2px 0.5em 2px 0.5em;
-	border-right: none;
+        padding: 2px 0.5em 2px 0.5em;
+        border-right: none;
     }
     footer li {
-	padding: 0 0.4em 0 0.4em;
+        padding: 0 0.4em 0 0.4em;
     }
 }
