--- a/themes/indigo/layout/_partial/plugins/mathjax.ejs
+++ b/themes/indigo/layout/_partial/plugins/mathjax.ejs
@@ -17,6 +17,6 @@ MathJax.Hub.Queue(function() {
     }
 });
 </script>
-
-<script async src="//cdn.bootcss.com/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML" async></script>
+<!-- fix compatibility between cloudflare and mathjax -->
+<script async src="//cdn.bootcss.com/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML" async data-cfasync=false ></script>
 <% } %>
