--- a/themes/indigo/source/css/_partial/layout.less
+++ b/themes/indigo/source/css/_partial/layout.less
@@ -38,11 +38,11 @@
     }
 
     .brand-wrap {
-        background-size: 100% 100%;
+        background-size: 100%;
     }
 
     .brand {
-        padding: 40px @menuPadding 2em;
+        padding: 140px @menuPadding 2em;
         background: fade(@primaryColor, 50%);
     }
 
@@ -124,6 +124,11 @@
 .body-wrap {
     padding: 30px 0 40px;
     min-height: ~'calc(100vh - 340px)';
+}
+
+img.center {
+    display: block;
+    margin: 0 auto;
 }
 
 .container {
@@ -238,7 +243,7 @@ a[title="站长统计"] {
 
     #menu {
         .brand {
-            padding-top: 20px;
+            padding-top: 120px;
             padding-bottom: 1em;
         }
 
