--- a/themes/indigo/source/css/_partial/page.less
+++ b/themes/indigo/source/css/_partial/page.less
@@ -252,3 +252,10 @@
         }
     }
 }
+
+.page-encrypt {
+    max-width: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
