--- a/themes/indigo/layout/_partial/menu.ejs
+++ b/themes/indigo/layout/_partial/menu.ejs
@@ -5,9 +5,11 @@
     </a>
     <div class="brand-wrap" style="background-image:url(<%- url_for(theme.brand) %>)">
       <div class="brand">
+        <% if (false) { %>
         <a href="<%- url_for(theme.avatar_link) %>" class="avatar waves-effect waves-circle waves-light">
           <img src="<%- url_for(theme.avatar) %>">
         </a>
+        <%}%>
         <hgroup class="introduce">
           <h5 class="nickname"><%- config.author %></h5>
           <%- mail_to(theme.email, theme.email, {class: 'mail'}) %>
