--- a/themes/indigo/layout/_partial/plugins/mathjax.ejs
+++ b/themes/indigo/layout/_partial/plugins/mathjax.ejs
@@ -18,5 +18,5 @@ MathJax.Hub.Queue(function() {
 });
 </script>
 <!-- fix compatibility between cloudflare and mathjax -->
-<script async src="//cdn.bootcss.com/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML" async data-cfasync=false ></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <% } %>
