--- a/themes/indigo/layout/_partial/script.ejs
+++ b/themes/indigo/layout/_partial/script.ejs
@@ -1,4 +1,4 @@
-<script src="//cdn.bootcss.com/node-waves/0.7.4/waves.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/node-waves/0.7.5/waves.min.js"></script>
 <script>
 var BLOG = { ROOT: '<%= config.root %>', SHARE: <%- theme.share %>, REWARD: <%- Boolean(page.reward) %> };
 
@@ -13,7 +13,9 @@ lazyScripts.push('//s95.cnzz.com/z_stat.php?id=<%-theme.cnzz %>&web_id=<%-theme.
 <script src="<%- url_for(theme_js('/js/search', cache)) %>" async></script>
 <% } %>
 
+<% if (page.math) { %>
 <%- partial('plugins/mathjax') %>
+<% } %>
 
 <% if (theme.visit_counter) { %>
 <script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
